# advancedfx

./: how_to_build.txt
AfxHookSource/: main.cpp
cmake/: FileEmbed.cmake
hlae/: LaunchCsgo.cs  LaunchCsgoForm.Designer.cs  LaunchCsgoForm.cs
injector/: AdvancedfxInjector.h  CMakeLists.txt  main.cpp
interfaces/c/: AdvancedfxModule.h  AdvancedfxTypes.h
